sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: sonarr
spec:
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
