sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: sonarr
  name: sonarr
  namespace: sonarr
spec:
  rules:
  - host: sonarr.sauerwein.se
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sonarr.sauerwein.se
    secretName: sonarr-cert
